k8s/auth-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: auth-service
  namespace: pqc-jwt

spec:
  selector:
    app: auth-service

  ports:
  - port: 8000
    targetPort: 8000

  type: ClusterIP
