k8s/prometheus.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: pqc-jwt

spec:
  replicas: 1

  selector:
    matchLabels:
      app: prometheus

  template:
    metadata:
      labels:
        app: prometheus

    spec:
      containers:
      - name: prometheus
        image: prom/prometheus

        args:
        - --config.file=/etc/prometheus/prometheus.yml

        volumeMounts:
        - name: config
          mountPath: /etc/prometheus

      volumes:
      - name: config
        configMap:
          name: prometheus-config
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: pqc-jwt

spec:
  type: NodePort

  selector:
    app: prometheus

  ports:
  - port: 9090
    nodePort: 30090
