k8s/user-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: user-service
  namespace: pqc-jwt

spec:
  selector:
    app: user-service

  ports:
  - port: 8000
    targetPort: 8000

  type: ClusterIP
