k8s/gateway.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pqc-gateway
  namespace: pqc-jwt
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web

spec:
  ingressClassName: traefik

  rules:
  - http:
      paths:

      - path: /login
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 8000

      - path: /metrics/crypto
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 8000

      - path: /protected
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 8000

      - path: /metrics/verify
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 8000
